--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Pandarallel will run on 3 workers.\n",
+      "INFO: Pandarallel will run on 7 workers.\n",
       "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
      ]
     }
@@ -461,14 +461,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/05/04 01:53:48 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/05/07 10:31:54 [INFO   ] (__main__) - Annotating Screening scores...\n",
       "9944\n",
       "6329\n"
      ]
@@ -545,24 +545,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_51119/1852667553.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df.fillna('.', inplace=True)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "265\n",
-      "6064\n",
-      "1501 + 4563\n"
+      "6064\n"
      ]
     }
    ],
@@ -589,6 +580,95 @@
     "print(df.duplicated(subset=['sample', 'ID']).sum())\n",
     "df.drop_duplicates(subset=['sample', 'ID'], inplace=True)\n",
     "print(len(df))\n",
+    "\n",
+    "df.columns = [\n",
+    "    'DM','PriorityScore', 'maxsplai', 'Gene.refGene', 'c.HGVS', 'p.HVGS', \n",
+    "    'Disease', 'is_Canonical', 'is_Frameshift', 'is_NMD_at_Canon', 'is_eLoF', \n",
+    "    'is_10%_truncation',\n",
+    "    'variant_id',\n",
+    "    'clinvar_same_pos', 'clinvar_same_motif', \n",
+    "    'sample', 'fa', 'mo', 'type', 'ID', 'vqslod', 'triodenovo', 'dnmfilter',\n",
+    "    'denovogear', 'denovofilter', 'sanger', 'SIFT_score', \n",
+    "    'SIFT_pred', 'Polyphen2_HVAR_score', 'Polyphen2_HVAR_pred', 'PROVEAN_score',\n",
+    "    'PROVEAN_pred', 'CADD_phred', 'GERP++_RS', 'gerp++gt2',\n",
+    "    'phyloP7way_vertebrate', 'phastCons7way_vertebrate', 'ExAC_ALL', 'ExAC_AFR',\n",
+    "    'ExAC_AMR', 'ExAC_EAS', 'ExAC_FIN', 'ExAC_NFE', 'ExAC_OTH', 'ExAC_SAS',\n",
+    "    'snp138NonFlagged', 'snp20160620_tommo_exome', 'esp6500siv2_all', 'CHROM',\n",
+    "    'POS', 'REF', 'ALT', 'gene_x', 'ENSG', 'ENST', 'Rank', 'csq',\n",
+    "    'Biotype', 'DNA_ID', 'Identified_Gene', 'State', \n",
+    "    'GeneSymbol', 'ENST_Full', 'ENSG_Full', 'Strand', 'Tag', 'is_Multi', \n",
+    "    'SpliceAI', 'DS_AG', 'DS_AL', 'DS_DG', 'DS_DL', 'DP_AG', 'DP_AL', 'DP_DG', 'DP_DL',\n",
+    "    'Int_loc', 'exon_loc', 'ex_up_dist',\n",
+    "    'ex_down_dist', 'exon_pos', 'exon_splice_site', 'SpliceType', 'Num_ExInt',\n",
+    "    'ExInt_INFO', 'prc_exon_loc',\n",
+    "    'Pseudoexon', 'Part_IntRet', 'Part_ExDel', 'Exon_skipping', 'Int_Retention',\n",
+    "    'multiexs', 'Size_Part_ExDel', 'Size_Part_IntRet', 'Size_pseudoexon',\n",
+    "    'Size_IntRet', 'Size_skipped_exon', 'CDS_Length', \n",
+    "    'is_Frameshift_Part_ExDel',\n",
+    "    'is_Frameshift_Part_IntRet', 'is_Frameshift_pseudoexon',\n",
+    "    'is_Frameshift_IntRet', 'is_Frameshift_skipped_exon', \n",
+    "    'skipped_region', 'deleted_region', 'skipped_ccrs', 'deleted_ccrs',\n",
+    "    'insilico_screening', 'clinvar_screening', 'altsymbol',\n",
+    "    'refseq', 'expected_inheritance', 'hgncID', 'omimid'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sample' 'fa' 'mo' 'type' 'ID' 'vqslod' 'triodenovo' 'dnmfilter'\n",
+      " 'denovogear' 'denovofilter' 'sanger' 'Gene.refGene' 'SIFT_score'\n",
+      " 'SIFT_pred' 'Polyphen2_HVAR_score' 'Polyphen2_HVAR_pred' 'PROVEAN_score'\n",
+      " 'PROVEAN_pred' 'CADD_phred' 'GERP++_RS' 'gerp++gt2'\n",
+      " 'phyloP7way_vertebrate' 'phastCons7way_vertebrate' 'ExAC_ALL' 'ExAC_AFR'\n",
+      " 'ExAC_AMR' 'ExAC_EAS' 'ExAC_FIN' 'ExAC_NFE' 'ExAC_OTH' 'ExAC_SAS'\n",
+      " 'snp138NonFlagged' 'snp20160620_tommo_exome' 'esp6500siv2_all' 'CHROM'\n",
+      " 'POS' 'REF' 'ALT' 'gene_x' 'ENSG' 'ENST' 'c.HGVS' 'p.HVGS' 'Rank' 'csq'\n",
+      " 'Biotype' 'DNA_ID' 'Identified_Gene' 'Disease' 'State' 'variant_id'\n",
+      " 'GeneSymbol' 'ENST_Full' 'ENSG_Full' 'Strand' 'Tag' 'is_Multi' 'SpliceAI'\n",
+      " 'DS_AG' 'DS_AL' 'DS_DG' 'DS_DL' 'DP_AG' 'DP_AL' 'DP_DG' 'DP_DL'\n",
+      " 'maxsplai' 'is_Canonical' 'Int_loc' 'exon_loc' 'ex_up_dist'\n",
+      " 'ex_down_dist' 'exon_pos' 'exon_splice_site' 'SpliceType' 'Num_ExInt'\n",
+      " 'clinvar_same_pos' 'clinvar_same_motif' 'ExInt_INFO' 'prc_exon_loc'\n",
+      " 'Pseudoexon' 'Part_IntRet' 'Part_ExDel' 'Exon_skipping' 'Int_Retention'\n",
+      " 'multiexs' 'Size_Part_ExDel' 'Size_Part_IntRet' 'Size_pseudoexon'\n",
+      " 'Size_IntRet' 'Size_skipped_exon' 'CDS_Length' 'is_10%_truncation'\n",
+      " 'is_eLoF' 'is_NMD_at_Canon' 'is_Frameshift_Part_ExDel'\n",
+      " 'is_Frameshift_Part_IntRet' 'is_Frameshift_pseudoexon'\n",
+      " 'is_Frameshift_IntRet' 'is_Frameshift_skipped_exon' 'is_Frameshift'\n",
+      " 'skipped_region' 'deleted_region' 'skipped_ccrs' 'deleted_ccrs'\n",
+      " 'insilico_screening' 'clinvar_screening' 'PriorityScore' 'altsymbol'\n",
+      " 'refseq' 'expected_inheritance' 'hgncID' 'omimid' 'DM']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# np.set_printoptions(np.inf) \n",
+    "np.set_printoptions(threshold=np.inf)\n",
+    "print(np.array(df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1501 + 4563\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "df.loc[df['Identified_Gene'] != '.', 'State'] = 'Identified'\n",
     "df_solved = df[df['State'] == 'Identified']\n",
