--- a/ValidationData/AUC/roc copy 2.ipynb
+++ b/ValidationData/AUC/roc copy 2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Pandarallel will run on 3 workers.\n",
+      "INFO: Pandarallel will run on 7 workers.\n",
       "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
      ]
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -5327,6 +5327,24 @@
     "print(f'Total solutions found: {len(all_solutions)}')\n",
     "for index, solution in enumerate(all_solutions):\n",
     "    print(f'Solution {index + 1}: {solution}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(all_solutions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('all_solutions_4840.tsv', sep='\\t', index=False)"
    ]
   },
   {
