--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Pandarallel will run on 3 workers.\n",
+      "INFO: Pandarallel will run on 7 workers.\n",
       "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
      ]
     }
@@ -167,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/04/22 02:17:08 [INFO   ] (__main__) - Classify \"Canonical\" splice site or \"Non-canonical\" splice site...\n",
+      "2024/05/11 05:49:12 [INFO   ] (__main__) - Classify \"Canonical\" splice site or \"Non-canonical\" splice site...\n",
       "-2: 27\n",
       "-1: 25\n",
       "+1: 53\n",
@@ -176,35 +176,35 @@
       "Canonical variants  : 126\n",
       "non-Canon variants  : 9818\n",
       "\n",
-      "2024/04/22 02:17:09 [INFO   ] (__main__) - Calculating exonic positions...\n"
+      "2024/05/11 05:49:12 [INFO   ] (__main__) - Calculating exonic positions...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9944/9944 [00:05<00:00, 1841.69it/s]\n"
+      "100%|██████████| 9944/9944 [00:05<00:00, 1933.52it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/04/22 02:17:14 [INFO   ] (__main__) - Annotating splicing information...\n"
+      "2024/05/11 05:49:18 [INFO   ] (__main__) - Annotating splicing information...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9944/9944 [00:06<00:00, 1456.46it/s]"
+      "100%|██████████| 9944/9944 [00:08<00:00, 1119.35it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/04/22 02:17:21 [INFO   ] (__main__) - Annotating ClinVar varaints interpretations...\n"
+      "2024/05/11 05:49:27 [INFO   ] (__main__) - Annotating ClinVar varaints interpretations...\n"
      ]
     },
     {
@@ -212,15 +212,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "100%|██████████| 9944/9944 [00:00<00:00, 24718.73it/s]\n",
-      "100%|██████████| 9944/9944 [00:00<00:00, 20020.38it/s]"
+      "100%|██████████| 9944/9944 [00:00<00:00, 35360.19it/s]\n",
+      "100%|██████████| 9944/9944 [00:00<00:00, 26602.37it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/04/22 02:17:22 [INFO   ] (__main__) - Parsing SpliceAI results...\n"
+      "2024/05/11 05:49:27 [INFO   ] (__main__) - Parsing SpliceAI results...\n"
      ]
     },
     {
@@ -228,24 +228,24 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "100%|██████████| 9944/9944 [00:09<00:00, 998.45it/s] \n",
-      "100%|██████████| 9944/9944 [00:01<00:00, 6012.66it/s]\n"
+      "100%|██████████| 9944/9944 [00:08<00:00, 1154.75it/s]\n",
+      "100%|██████████| 9944/9944 [00:01<00:00, 5720.97it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/04/22 02:17:40 [INFO   ] (__main__) - Annotating aberrant splicing size (bp)...\n",
-      "2024/04/22 02:17:41 [INFO   ] (__main__) - Predicting CDS change...\n"
+      "2024/05/11 05:49:45 [INFO   ] (__main__) - Annotating aberrant splicing size (bp)...\n",
+      "2024/05/11 05:49:46 [INFO   ] (__main__) - Predicting CDS change...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9944/9944 [00:06<00:00, 1593.36it/s]\n",
-      "100%|██████████| 9944/9944 [00:00<00:00, 109167.94it/s]"
+      "100%|██████████| 9944/9944 [00:05<00:00, 1861.72it/s]\n",
+      "100%|██████████| 9944/9944 [00:00<00:00, 111616.43it/s]"
      ]
     },
     {
@@ -268,8 +268,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/04/22 02:17:50 [INFO   ] (__main__) - Annotating CCRs info...\n",
-      "2024/04/22 02:17:50 [INFO   ] (__main__) - Annotate CCR score\n"
+      "2024/05/11 05:49:53 [INFO   ] (__main__) - Annotating CCRs info...\n",
+      "2024/05/11 05:49:53 [INFO   ] (__main__) - Annotate CCR score\n"
      ]
     }
    ],
@@ -456,28 +456,28 @@
    "source": [
     "### Don't touch the original data ###\n",
     "### Save the result as pickle file before scoring ###\n",
-    "df.to_pickle('./pickles/mydata_prescore.pkl')"
+    "df.to_pickle('./pickles/mydata_prescore_Fixed.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_pickle('./pickles/mydata_prescore.pkl')"
+    "df = pd.read_pickle('./pickles/mydata_prescore_Fixed.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/05/09 06:10:00 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/05/11 05:50:05 [INFO   ] (__main__) - Annotating Screening scores...\n",
       "9944\n",
       "6406\n"
      ]
@@ -526,23 +526,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_20344/2384995985.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df.fillna('.', inplace=True)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "280\n",
       "6139\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/39/q9rpt60x7m74m_l4hj8fj7q40000gn/T/ipykernel_26184/2384995985.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.fillna('.', inplace=True)\n"
      ]
     }
    ],
@@ -582,9 +582,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/39/q9rpt60x7m74m_l4hj8fj7q40000gn/T/ipykernel_26184/3413590100.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df['skipped_ccrs'] = df['skipped_ccrs'].replace('.', np.nan).astype(float)\n",
+      "/var/folders/39/q9rpt60x7m74m_l4hj8fj7q40000gn/T/ipykernel_26184/3413590100.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df['deleted_ccrs'] = df['deleted_ccrs'].replace('.', np.nan).astype(float)\n"
+     ]
+    }
+   ],
    "source": [
     "# Replace '.' to np.nan in 'skipped_ccrs' and 'deleted_ccrs'\n",
     "# Change type to float in 'skipped_ccrs' and 'deleted_ccrs'\n",
@@ -595,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -651,17 +662,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save as tsv\n",
-    "df.to_csv(f'./ExcelOutput/FINAL_mydata.denovo.all.tsv', sep='\\t', index=False, encoding='shift-jis')\n",
+    "df.to_csv(f'./ExcelOutput/Fixed_FINAL_mydata.denovo.all.tsv', sep='\\t', index=False, encoding='shift-jis')\n",
     "\n",
     "# Save as xlsx\n",
-    "df.to_excel(f'./ExcelOutput/FINAL_mydata.denovo.all.xlsx', index=False)\n",
-    "df_unsolved.to_excel(f'./ExcelOutput/FINAL_mydata.denovo.unsolved.xlsx', index=False)\n",
-    "df_solved.to_excel(f'./ExcelOutput/FINAL_mydata.denovo.solved.xlsx', index=False)"
+    "df.to_excel(f'./ExcelOutput/Fixed_FINAL_mydata.denovo.all.xlsx', index=False)\n",
+    "df_unsolved.to_excel(f'./ExcelOutput/Fixed_FINAL_mydata.denovo.unsolved.xlsx', index=False)\n",
+    "df_solved.to_excel(f'./ExcelOutput/Fixed_FINAL_mydata.denovo.solved.xlsx', index=False)"
    ]
   },
   {
