--- a/ValidationData/AUC/roc copy 2.ipynb
+++ b/ValidationData/AUC/roc copy 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -5331,7 +5331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5362,28 +5362,13 @@
     "             'non_canon_splai_lte_0.1_other': -2,\n",
     "             'non_canon_splai_bet_0.1_0.2': 1,\n",
     "             'non_canon_splai_gte_0.2': 2,\n",
-    "             'canon_moderate': 6, \n",
-    "             'canon_strong': 5, \n",
+    "             'canon_strong': 6, \n",
+    "             'canon_moderate': 5, \n",
     "             'frameshift_nmd_eloF': 7, \n",
     "             'frameshift_nmd_not_eloF': 3,\n",
     "             'canon_splai_lte_0.1': -3,\n",
     "             'canon_splai_bet_0.1_0.2': -1,\n",
     "             'canon_splai_gte_0.2': 0},\n",
-    "    'Candidate_1': \n",
-    "            {'clinvar_same_pos': 1,\n",
-    "             'clinvar_same_motif': 0,\n",
-    "             'clinvar_else': 0,\n",
-    "             'non_canon_splai_lte_0.1_outside': 0,\n",
-    "             'non_canon_splai_lte_0.1_other': 1,\n",
-    "             'non_canon_splai_bet_0.1_0.2': 3,\n",
-    "             'non_canon_splai_gte_0.2': 4,\n",
-    "             'canon_moderate': 3, \n",
-    "             'canon_strong': 4, \n",
-    "             'frameshift_nmd_eloF': 5, \n",
-    "             'frameshift_nmd_not_eloF': 3,\n",
-    "             'canon_splai_lte_0.1': -3,\n",
-    "             'canon_splai_bet_0.1_0.2': -1,\n",
-    "             'canon_splai_gte_0.2': 3},\n",
     "}"
    ]
   },
@@ -5399,7 +5384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -5407,15 +5392,62 @@
      "output_type": "stream",
      "text": [
       "Solution 1\n",
-      "0.9955465938 [0.994818316113-0.996274871466]\n",
       "Solution 2\n",
-      "0.9955666938 [0.994817871540-0.996315516033]\n",
+      "0.9955872574 [0.994838847514-0.996335667371]\n",
       "Solution 12\n",
-      "0.9957836768 [0.995057677965-0.996509675550]\n",
+      "0.9957814795 [0.995055485881-0.996507473048]\n",
       "Solution 79\n",
-      "0.9957880602 [0.995062094601-0.996514025719]\n",
+      "0.9957858629 [0.995059902515-0.996511823217]\n",
       "Solution 87\n",
-      "0.9958041001 [0.995078375862-0.996529824330]\n"
+      "0.9958003207 [0.995074566152-0.996526075188]\n",
+      "Solution 101\n",
+      "Solution 201\n",
+      "Solution 301\n",
+      "Solution 401\n",
+      "Solution 501\n",
+      "Solution 601\n",
+      "Solution 701\n",
+      "Solution 801\n",
+      "Solution 901\n",
+      "Solution 1001\n",
+      "Solution 1101\n",
+      "Solution 1201\n",
+      "Solution 1301\n",
+      "Solution 1401\n",
+      "Solution 1501\n",
+      "Solution 1601\n",
+      "Solution 1701\n",
+      "Solution 1801\n",
+      "Solution 1901\n",
+      "Solution 2001\n",
+      "Solution 2101\n",
+      "Solution 2201\n",
+      "Solution 2301\n",
+      "Solution 2401\n",
+      "Solution 2501\n",
+      "Solution 2601\n",
+      "Solution 2701\n",
+      "Solution 2801\n",
+      "Solution 2901\n",
+      "Solution 3001\n",
+      "Solution 3101\n",
+      "Solution 3201\n",
+      "Solution 3301\n",
+      "Solution 3401\n",
+      "Solution 3501\n",
+      "Solution 3601\n",
+      "Solution 3701\n",
+      "Solution 3801\n",
+      "Solution 3901\n",
+      "Solution 4001\n",
+      "Solution 4101\n",
+      "Solution 4201\n",
+      "Solution 4301\n",
+      "Solution 4401\n",
+      "Solution 4501\n",
+      "Solution 4601\n",
+      "Solution 4701\n",
+      "Solution 4801\n"
      ]
     }
    ],
@@ -5424,6 +5456,10 @@
     "buf = 0.9955\n",
     "\n",
     "for index, solution in enumerate(all_solutions):\n",
+    "    if index % 100 == 0:\n",
+    "        print(f'Solution {index + 1}')\n",
+    "    else:\n",
+    "        pass\n",
     "    scoring_calibration[f\"Solution {index + 1}\"] = scoaring_calibraiton(solution)\n",
     "    if buf < float(scoring_calibration[f'Solution {index + 1}'].split(' ')[0]):\n",
     "        buf = float(scoring_calibration[f'Solution {index + 1}'].split(' ')[0])\n",
@@ -5432,13 +5468,14 @@
     "    else:\n",
     "        pass\n",
     "\n",
+    "\n",
     "# for set_name, ths in thsdict.items():\n",
     "#     scoring_calibration[set_name] = scoaring_calibraiton(ths)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5447,7 +5484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5457,11 +5494,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cal.to_csv('scoring_calibration_Full_Solution.csv', index=False, sep='\\t')"
+    "df_cal.to_csv('Fixed_scoring_calibration_Full_Solution.csv', index=False, sep='\\t')"
    ]
   },
   {
@@ -129733,7 +129770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
