--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/05/11 05:50:05 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/05/11 08:13:46 [INFO   ] (__main__) - Annotating Screening scores...\n",
       "9944\n",
       "6406\n"
      ]
@@ -541,7 +541,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/39/q9rpt60x7m74m_l4hj8fj7q40000gn/T/ipykernel_26184/2384995985.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/39/q9rpt60x7m74m_l4hj8fj7q40000gn/T/ipykernel_65836/2384995985.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.fillna('.', inplace=True)\n"
      ]
     }
@@ -589,9 +589,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/39/q9rpt60x7m74m_l4hj8fj7q40000gn/T/ipykernel_26184/3413590100.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/39/q9rpt60x7m74m_l4hj8fj7q40000gn/T/ipykernel_65836/3413590100.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df['skipped_ccrs'] = df['skipped_ccrs'].replace('.', np.nan).astype(float)\n",
-      "/var/folders/39/q9rpt60x7m74m_l4hj8fj7q40000gn/T/ipykernel_26184/3413590100.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/39/q9rpt60x7m74m_l4hj8fj7q40000gn/T/ipykernel_65836/3413590100.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df['deleted_ccrs'] = df['deleted_ccrs'].replace('.', np.nan).astype(float)\n"
      ]
     }
@@ -658,6 +658,15 @@
     "df_unsolved = df[df['State'] == 'Undetermined']\n",
     "\n",
     "print(f\"{len(df_solved)} + {len(df_unsolved)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_pickle(f'./ExcelOutput/Fixed_FINAL_mydata.denovo.all.pkl')"
    ]
   },
   {
