--- a/ValidationData/AUC/roc copy 2.ipynb
+++ b/ValidationData/AUC/roc copy 2.ipynb
@@ -583,6 +583,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "bootstrap = 100\n",
     "\n",
@@ -605,7 +612,7 @@
     "    scoring_calibration = {}\n",
     "    for index, solution in enumerate(all_solutions):\n",
     "        if index % 200 == 0:\n",
-    "            print(f'Solution {index + 1}')\n",
+    "            print(f'set {i}: Solution {index + 1}')\n",
     "        else:\n",
     "            pass\n",
     "        scoring_calibration[f\"Solution {index + 1}\"] = scoaring_calibraiton(solution, f'pkls/tp_val_{i}.pkl', f'pkls/tn_val_{i}.pkl')\n",
@@ -614,8 +621,12 @@
     "            print(f\"set {i}: Solution {index + 1} -> {scoring_calibration[f'Solution {index + 1}']}\")\n",
     "        else:\n",
     "            pass\n",
-    "    \n",
-    "    all_results[f\"set {i}\"] = scoring_calibration\n"
+    "\n",
+    "    all_results[f\"set {i}\"] = scoring_calibration\n",
+    "\n",
+    "    # Write a falg file into the pkls directory for progress check \n",
+    "    with open(f'pkls/flag_bootstrap_{i}', 'w') as f:\n",
+    "        f.write('Done')\n"
    ]
   },
   {
@@ -631,12 +642,11 @@
     "    pickle.dump(all_results, f)\n",
     "\n",
     "# When completed in bootstrap section, make a flag file\n",
-    "with open('pkls/flag_bootstrap', 'w') as f:\n",
+    "with open('pkls/flag_bootstrap_all', 'w') as f:\n",
     "    f.write('Completed')\n",
     "\n",
-    "\n",
     "# load all_results object from pickle\n",
-    "with open('pkls_old/all_results.pkl', 'rb') as f:\n",
+    "with open('pkls/all_results.pkl', 'rb') as f:\n",
     "    all_results_restored = pickle.load(f)\n",
     "\n",
     "df = pd.DataFrame(columns=['Dataset', 'Candidate', 'Score'])\n",
