--- a/ValidationData/AUC/roc copy 3.ipynb
+++ b/ValidationData/AUC/roc copy 3.ipynb
@@ -634,7 +634,69 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "train_x, test_x, train_y, test_y = train_test_split(data, label, train_size = 0.8 ,test_size = 0.2, shuffle = True, random_state = 0)\n"
+    "train_x, test_x, train_y, test_y = train_test_split(data, label, train_size = 0.8 ,test_size = 0.2, shuffle = True, random_state = 0)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from concurrent.futures import ProcessPoolExecutor\n",
+    "import os\n",
+    "\n",
+    "# Load overall data for TP and TN \n",
+    "df_tp_all = pd.read_pickle('../TP/tp_prescore.pkl')\n",
+    "df_tn_all = pd.read_pickle('../TN/tn_prescore.pkl')\n",
+    "\n",
+    "def process_bootstrap(i):\n",
+    "    results = {}\n",
+    "    # For TP\n",
+    "    tp_val = df_tp_all.sample(frac=0.9, random_state=i)\n",
+    "    tp_test = df_tp_all.drop(tp_val.index)\n",
+    "    tp_val.to_pickle(f'pkls/tp_val_{i}.pkl')\n",
+    "    tp_test.to_pickle(f'pkls/tp_test_{i}.pkl')\n",
+    "    \n",
+    "    # For TN\n",
+    "    tn_val = df_tn_all.sample(frac=0.9, random_state=i)\n",
+    "    tn_test = df_tn_all.drop(tn_val.index)\n",
+    "    tn_val.to_pickle(f'pkls/tn_val_{i}.pkl')\n",
+    "    tn_test.to_pickle(f'pkls/tn_test_{i}.pkl')\n",
+    "\n",
+    "    scoring_calibration = {}\n",
+    "    for index, solution in enumerate(all_solutions):\n",
+    "        if index % 200 == 0:\n",
+    "            print(f'set {i}: Solution {index + 1}')\n",
+    "        else:\n",
+    "            pass\n",
+    "        scoring_calibration[f\"Solution {index + 1}\"] = scoaring_calibraiton(\n",
+    "            solution, f'pkls/tp_val_{i}.pkl', f'pkls/tn_val_{i}.pkl')\n",
+    "\n",
+    "    # When completed eacj bootstrap, create a flag file\n",
+    "    with open(f'pkls/flag_bootstrap_{i}', 'w') as f:\n",
+    "        f.write('Done')\n",
+    "    \n",
+    "    results[i] = scoring_calibration\n",
+    "    return results\n",
+    "\n",
+    "# Set number of bootstrap and parallel processing \n",
+    "bootstrap = 100\n",
+    "all_results: dict = {}\n",
+    "\n",
+    "with ProcessPoolExecutor() as executor:\n",
+    "    future_results = list(executor.map(process_bootstrap, range(1, bootstrap + 1)))\n",
+    "for result in future_results:\n",
+    "    all_results.update(result)\n",
+    "\n",
+    "with open(f'pkls/Completed', 'w') as f:\n",
+    "    f.write(\"All processes are complete.\")\n",
+    "\n",
+    "# Save the all_results as pickle\n",
+    "with open('all_results.pkl', 'wb') as f:\n",
+    "    pickle.dump(all_results, f)\n"
    ]
   },
   {
@@ -652,11 +714,11 @@
     "# Sampling 10% of the data for validation and test sets. Generetae 10 sets\n",
     "all_results = {}\n",
     "for i in range(1, bootstrap + 1):\n",
-    "    tp_val = df_tp_all.sample(frac=0.1, random_state=i)\n",
+    "    tp_val = df_tp_all.sample(frac=0.9, random_state=i)\n",
     "    tp_test = df_tp_all.drop(tp_val.index)\n",
     "    tp_val.to_pickle(f'pkls/tp_val_{i}.pkl')\n",
     "    tp_test.to_pickle(f'pkls/tp_test_{i}.pkl')\n",
-    "    tn_val = df_tn_all.sample(frac=0.1, random_state=i)\n",
+    "    tn_val = df_tn_all.sample(frac=0.9, random_state=i)\n",
     "    tn_test = df_tn_all.drop(tn_val.index)\n",
     "    tn_val.to_pickle(f'pkls/tn_val_{i}.pkl')\n",
     "    tn_test.to_pickle(f'pkls/tn_test_{i}.pkl')\n",
