--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Pandarallel will run on 3 workers.\n",
+      "INFO: Pandarallel will run on 7 workers.\n",
       "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
      ]
     }
@@ -160,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/05/21 06:21:56 [INFO   ] (__main__) - Classify \"Canonical\" splice site or \"Non-canonical\" splice site...\n",
+      "2024/05/21 01:54:41 [INFO   ] (__main__) - Classify \"Canonical\" splice site or \"Non-canonical\" splice site...\n",
       "-2: 27\n",
       "-1: 25\n",
       "+1: 53\n",
@@ -176,35 +176,35 @@
       "Canonical variants  : 126\n",
       "non-Canon variants  : 9818\n",
       "\n",
-      "2024/05/21 06:21:56 [INFO   ] (__main__) - Calculating exonic positions...\n"
+      "2024/05/21 01:54:41 [INFO   ] (__main__) - Calculating exonic positions...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9944/9944 [00:11<00:00, 894.58it/s] \n"
+      "100%|██████████| 9944/9944 [00:05<00:00, 1889.19it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/05/21 06:22:08 [INFO   ] (__main__) - Annotating splicing information...\n"
+      "2024/05/21 01:54:47 [INFO   ] (__main__) - Annotating splicing information...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9944/9944 [01:53<00:00, 87.92it/s] "
+      "100%|██████████| 9944/9944 [00:10<00:00, 938.58it/s] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/05/21 06:24:01 [INFO   ] (__main__) - Annotating ClinVar varaints interpretations...\n"
+      "2024/05/21 01:54:57 [INFO   ] (__main__) - Annotating ClinVar varaints interpretations...\n"
      ]
     },
     {
@@ -212,15 +212,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "100%|██████████| 9944/9944 [00:00<00:00, 26600.18it/s]\n",
-      "100%|██████████| 9944/9944 [00:00<00:00, 20134.04it/s]"
+      "100%|██████████| 9944/9944 [00:00<00:00, 34524.79it/s]\n",
+      "100%|██████████| 9944/9944 [00:00<00:00, 26221.29it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/05/21 06:24:02 [INFO   ] (__main__) - Parsing SpliceAI results...\n"
+      "2024/05/21 01:54:58 [INFO   ] (__main__) - Parsing SpliceAI results...\n"
      ]
     },
     {
@@ -228,24 +228,24 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "100%|██████████| 9944/9944 [00:27<00:00, 362.25it/s]\n",
-      "100%|██████████| 9944/9944 [00:02<00:00, 4412.98it/s]\n"
+      "100%|██████████| 9944/9944 [00:12<00:00, 777.57it/s] \n",
+      "100%|██████████| 9944/9944 [00:01<00:00, 5931.57it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/05/21 06:24:41 [INFO   ] (__main__) - Annotating aberrant splicing size (bp)...\n",
-      "2024/05/21 06:24:43 [INFO   ] (__main__) - Predicting CDS change...\n"
+      "2024/05/21 01:55:17 [INFO   ] (__main__) - Annotating aberrant splicing size (bp)...\n",
+      "2024/05/21 01:55:17 [INFO   ] (__main__) - Predicting CDS change...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9944/9944 [00:09<00:00, 1004.17it/s]\n",
-      "100%|██████████| 9944/9944 [00:00<00:00, 54319.88it/s]"
+      "100%|██████████| 9944/9944 [00:07<00:00, 1299.33it/s]\n",
+      "100%|██████████| 9944/9944 [00:00<00:00, 111545.98it/s]"
      ]
     },
     {
@@ -268,8 +268,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/05/21 06:24:57 [INFO   ] (__main__) - Annotating CCRs info...\n",
-      "2024/05/21 06:24:58 [INFO   ] (__main__) - Annotate CCR score\n"
+      "2024/05/21 01:55:27 [INFO   ] (__main__) - Annotating CCRs info...\n",
+      "2024/05/21 01:55:27 [INFO   ] (__main__) - Annotate CCR score\n"
      ]
     }
    ],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,14 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/05/21 06:25:10 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/05/21 01:55:40 [INFO   ] (__main__) - Annotating Screening scores...\n",
       "9944\n",
       "6406\n"
      ]
@@ -526,23 +526,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_48098/2384995985.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df.fillna('.', inplace=True)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "280\n",
       "6139\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/39/q9rpt60x7m74m_l4hj8fj7q40000gn/T/ipykernel_8227/2384995985.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.fillna('.', inplace=True)\n"
      ]
     }
    ],
@@ -582,9 +582,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/39/q9rpt60x7m74m_l4hj8fj7q40000gn/T/ipykernel_8227/3413590100.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df['skipped_ccrs'] = df['skipped_ccrs'].replace('.', np.nan).astype(float)\n",
+      "/var/folders/39/q9rpt60x7m74m_l4hj8fj7q40000gn/T/ipykernel_8227/3413590100.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df['deleted_ccrs'] = df['deleted_ccrs'].replace('.', np.nan).astype(float)\n"
+     ]
+    }
+   ],
    "source": [
     "# Replace '.' to np.nan in 'skipped_ccrs' and 'deleted_ccrs'\n",
     "# Change type to float in 'skipped_ccrs' and 'deleted_ccrs'\n",
@@ -595,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -651,6 +662,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Manual curation for wheter a case is solved or not\n",
+    "\n",
+    "solved_case_ids = [42]\n",
+    "\n",
+    "\n",
+    "df.loc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -660,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
