--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -668,7 +668,7 @@
    "source": [
     "# Manual curation for wheter a case is solved or not\n",
     "\n",
-    "solved_case_ids = [42]\n",
+    "solved_case_ids = ['Sample_4143']\n",
     "\n",
     "\n",
     "df.loc"
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
        "67"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
