--- a/ValidationData/AUC/roc_bootstrap.ipynb
+++ b/ValidationData/AUC/roc_bootstrap.ipynb
@@ -54,25 +54,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel 'wesanno (Python 3.9.18)'. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details. ENOSPC: no space left on device, open '/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/kernel-v2-73458TQyfLeJ01Z61.json'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start: 1, end: 10, bootstrap: 10\n",
+      "index: 0, set_num: 1\n",
+      "index: 1, set_num: 2\n",
+      "index: 2, set_num: 3\n",
+      "index: 3, set_num: 4\n",
+      "index: 4, set_num: 5\n",
+      "index: 5, set_num: 6\n",
+      "index: 6, set_num: 7\n",
+      "index: 7, set_num: 8\n",
+      "index: 8, set_num: 9\n",
+      "index: 9, set_num: 10\n"
      ]
     }
    ],
    "source": [
-    "start = 11\n",
-    "end = 20\n",
+    "start = 1\n",
+    "end = 10\n",
     "bootstrap = int(end) - int(start) + 1\n",
     "\n",
-    "for i, set_num in enumerate(range(start, bootstrap + 1)):\n",
+    "print(f\"start: {start}, end: {end}, bootstrap: {bootstrap}\")\n",
+    "for i, set_num in enumerate(range(start, end + 1)):\n",
     "    print(f\"index: {i}, set_num: {set_num}\")"
    ]
   },
