--- a/ValidationData/AUC/roc copy 4.ipynb
+++ b/ValidationData/AUC/roc copy 4.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5351,7 +5351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5511,7 +5511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5538,7 +5538,7 @@
     "\n",
     "# Combine tp and tn and save\n",
     "data = pd.concat([tp, tn], ignore_index=True)\n",
-    "data.to_csv('/Users/utsu/work/Github/R-Projects/roc/all_tp_tn.tsv', index=False, sep='\\t')\n"
+    "# data.to_csv('/Users/utsu/work/Github/R-Projects/roc/all_tp_tn.tsv', index=False, sep='\\t')\n"
    ]
   },
   {
@@ -5578,7 +5578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -5587,7 +5587,7 @@
      "text": [
       "AUC - Framework (95%CI): 0.996 [0.9951-0.9965]\n",
       "AUC - SpliceAI (95%CI) : 0.994 [0.9934-0.9952]\n",
-      "p-value (DeLong Test)  : 1.94e-04\n"
+      "p-value (DeLong Test)  : 1.95e-04\n"
      ]
     }
    ],
@@ -5986,7 +5986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -6057,11 +6057,11 @@
           "Threshold: 2, Sensitivity: 0.986",
           "Threshold: 3, Sensitivity: 0.922",
           "Threshold: 4, Sensitivity: 0.816",
-          "Threshold: 5, Sensitivity: 0.721",
-          "Threshold: 6, Sensitivity: 0.638",
-          "Threshold: 7, Sensitivity: 0.551",
+          "Threshold: 5, Sensitivity: 0.720",
+          "Threshold: 6, Sensitivity: 0.637",
+          "Threshold: 7, Sensitivity: 0.550",
           "Threshold: 8, Sensitivity: 0.308",
-          "Threshold: 9, Sensitivity: 0.200",
+          "Threshold: 9, Sensitivity: 0.199",
           "Threshold: 10, Sensitivity: 0.000"
          ],
          "type": "scatter",
@@ -6083,12 +6083,12 @@
           0.9955713873110619,
           0.9864253393665159,
           0.9223067295658034,
-          0.816308847597959,
-          0.7209974005969,
-          0.6377202272070858,
-          0.551073457206123,
-          0.3084625012034274,
-          0.19957639356888418,
+          0.8157312024646193,
+          0.7202272070857803,
+          0.6366612111292962,
+          0.5500144411283335,
+          0.30798113025897755,
+          0.1992875710022143,
           0
          ]
         }
@@ -6986,7 +6986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -7026,12 +7026,12 @@
          ],
          "y": [
           0,
-          0.19957639356888418,
-          0.3084625012034274,
-          0.551073457206123,
-          0.6377202272070858,
-          0.7209974005969,
-          0.816308847597959,
+          0.1992875710022143,
+          0.30798113025897755,
+          0.5500144411283335,
+          0.6366612111292962,
+          0.7202272070857803,
+          0.8157312024646193,
           0.9223067295658034,
           0.9864253393665159,
           0.9955713873110619,
@@ -7298,12 +7298,12 @@
          ],
          "y": [
           0,
-          0.19957639356888418,
-          0.3084625012034274,
-          0.551073457206123,
-          0.6377202272070858,
-          0.7209974005969,
-          0.816308847597959,
+          0.1992875710022143,
+          0.30798113025897755,
+          0.5500144411283335,
+          0.6366612111292962,
+          0.7202272070857803,
+          0.8157312024646193,
           0.9223067295658034,
           0.9864253393665159,
           0.9955713873110619,
@@ -7322,7 +7322,7 @@
            "size": 12
           },
           "showarrow": false,
-          "text": "DeLong's test p-value = 1.94e-04",
+          "text": "DeLong's test p-value = 1.95e-04",
           "x": 0.6,
           "xref": "paper",
           "y": 0.05,
@@ -126508,7 +126508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
