--- a/ValidationData/AUC/bootstrap_results.ipynb
+++ b/ValidationData/AUC/bootstrap_results.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Pandarallel will run on 3 workers.\n",
+      "INFO: Pandarallel will run on 7 workers.\n",
       "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
      ]
     }
@@ -256,7 +256,7 @@
    "outputs": [],
    "source": [
     "# Output solutions as xlsx\n",
-    "solutions.to_excel('/Volumes/vol/work/Github/dev/ValidationData/AUC/bootstrap_results/solutions.xlsx', index=False)\n"
+    "solutions.to_excel('/Volumes/vol/work/Github/dev/ValidationData/AUC/bootstrap_results/solutions.xlsx', index=False)"
    ]
   },
   {
@@ -330,7 +330,10 @@
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Comparison analysis Framework vs SpliceAI alone\n",
+    "# Test data pkls\n"
+   ]
   }
  ],
  "metadata": {
